gccida/g1/print_version
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_version/src/toplev.c:4877:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.name, 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_version/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_version/src/obj/toplev.o] Error 1
